2021-04-13 James D. Trotter <james@simula.no>

	Add automake.

	Add TexLive and a number of its dependencies. Also, partially
	address circular dependency between harfbuzz, graphite2 and
	freetype.

2021-03-22 James D. Trotter <james@simula.no>

	Add an option and make flag to enable CUDA support instead of relying on ARCH

2021-03-19 James D. Trotter <james@simula.no>

        Released version 0.6.0.

	Upgrade hwloc 2.0.4 -> 2.4.1.

2020-10-25 James D. Trotter <james@simula.no>

        Initial version.

Copyright (C) 2021 James D. Trotter
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.