@@ -1,3 +1,7 @@
+2021-05-10 James D. Trotter <james@simula.no>
+
+	Add hunspell.
+
 2021-04-13 James D. Trotter <james@simula.no>
 
 	Add automake.
